--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "recoil": "^0.6.1",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
