--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "react-animated-css": "^1.2.1",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-schemaorg": "^2.0.0",
     "recoil": "^0.6.1",
+    "schema-dts": "^1.1.0",
     "styled-components": "^5.3.3",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
+    "@types/howler": "^2.2.6",
+    "@types/node": "^17.0.21",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/styled-components": "^5.1.24",
